library-service/src/main/java/org/example/libraryservice/error/UserNotFoundException.java
package org.example.libraryservice.error;

import java.util.NoSuchElementException;

public class UserNotFoundException extends NoSuchElementException {
    public UserNotFoundException(String message) {
        super(message);
    }
}